--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,26 @@
 
+version: "3.9"
+
+services:
+  web:
+    image: nginx:alpine
+    container_name: web
+    ports: ["8080:80"]
+    volumes:
+      - ./site/src:/usr/share/nginx/html:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./security-headers.conf:/etc/nginx/conf.d/security-headers.conf:ro
+    restart: unless-stopped
+    read_only: true
+    tmpfs:
+      - /var/cache/nginx
+      - /var/run
+
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: cf-tunnel
+    command: tunnel --no-autoupdate run --token ${TUNNEL_TOKEN}
+    environment:
+      - TUNNEL_TOKEN=${TUNNEL_TOKEN}
+    depends_on: [web]
+    restart: unless-stopped
